default/objects/Call_History_Item__c/Call_History_Item__c.object-meta.xml
<CustomObject>
    <description>The object for call history</description>
    <label>Call History Item</label>
    <nameField>
        <label>Call History Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call History Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>