default/objects/Call_History_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Call History Items</relationshipLabel>
    <relationshipName>Call_History_Items</relationshipName>
    <type>Lookup</type>
</CustomField>