default/objects/Call_History_Item__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End of a call</description>
    <label>End Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>