default/objects/Call_History_Item__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>