default/objects/Call_History_Item__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Agent extension</description>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>