default/objects/Call_History_Item__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Event registration time</description>
    <label>Start Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>