default/objects/Call_History_Item__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>