default/objects/Call_History_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>